2010-05-23  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Rename wshelperheaddir to mingwhelperheaddir,
	rename WSHELPERHEAD_LIST to MINGWHELPERHEAD_LIST.
	* configure.ac: Rename WSHELPERHEAD_LIST to MINGWHELPERHEAD_LIST.
	* configure: Regenerated.
	* Makefile.in: Regenerated.

2010-05-23  Kai Tietz  <kai.tietz@onevision.com>

	* configure.ac, Makefile.am: Rename _ws_helper to mingw_inc.
	* Makefile.in, configure: Regenerated.

2010-05-23  Doug Semler <dougsemler@gmail.com>

	* configure.ac: Set WSHELPERHEAD_LIST to headers in _ws_helpers
	  subdirectory and AC_SUBST for Makefile.in.
	* Makefile.am: Add _ws_helpers headers to EXTRA_HEADERS.
	  Set up wshelperheaddir as subdirectory of base include directory.
	  Install WSHELPERHEAD_LIST headers from configure into wshelperhead
	  directory.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2010-02-11  Kai Tietz  <kai.tietz@onevision.com>

	* include/process.h: Moved away into
	* crt/process.h: new loaction.
	* Makefile.am: Add crt/process.h header.

2010-02-10  Ozkan Sezer  <sezeroz@gmail.com>

	* include/winuser.h (CloseTouchInputHandle): New API missed in
	revision 1530.
	(GetTouchInputInfo): Likewise.

	* include/winuser.h (PBT_POWERSETTINGCHANGE): Define for
	_WIN32_WINNT >= 0x0600.

2010-02-10  Kai Tietz  <kai.tietz@onevision.com>

	* include/shlguid.h: Reduce required _WIN32_IE to >= 0x0500.
	This isn't really correct, but to make it compatible to commctrl.h
	we have to change it here, too.
	* include/shlobj.h: Likewise.
	* include/winuser.h (POWERBROADCAST_SETTING): New type.
	(PPOWERBROADCAST_SETTING): Likewise.
	(RegisterPowerSettingNotification): New API.
	(UnregisterPowerSettingNotification): Likewise.

2010-01-25  Mook <mook.gcc@gmail.com>

	* include/wincrypt.h: Comment out CERT_ALT_NAME_ENTRY::x400Address.

2010-01-24  NightStrike <NightStrike@gmail.com>

	* include/wincrypt.h: Update to w32api 3.11 upstream.
	* include/w32api.h: Update w32api compatibility version number to
	3.11.
